--- a/WebContent/pagoprovision.xhtml
+++ b/WebContent/pagoprovision.xhtml
@@ -174,15 +174,21 @@
 										<h:panelGrid columns="1" cellpadding="5">
 
 										<p:panel>
-											<h:panelGrid columns="5" cellpadding="5">
-											<h:outputText for="FEPGPR" value="Fecha de Pago: " />
-											<p:inputMask id="FEPGPR" value="#{GestorPagosProvision.sFEPGPR}" mask="99/99/9999" size="10" maxlength="10"/>
+											<h:panelGrid columns="7" cellpadding="5">
+												<h:outputText for="FEPGPR" value="Fecha de Pago: " />
+												<p:inputMask id="FEPGPR" value="#{GestorPagosProvision.sFEPGPR}" mask="99/99/9999" size="10" maxlength="10"/>
 
-											<p:commandButton icon="ui-icon-clock" update="FEPGPR" actionListener="#{GestorPagosProvision.hoyFEPGPR}"/>
+												<p:commandButton icon="ui-icon-clock" update="FEPGPR" actionListener="#{GestorPagosProvision.hoyFEPGPR}"/>
 
-											<h:outputText for="FechaUltimoDevengo" value="Fecha del último devengo: " />
-											<p:inputText id="FechaUltimoDevengo" value="#{GestorPagosProvision.sFechaUltimoDevengo}" size="9" disabled="true"/>
+												<h:outputText for="FechaUltimoDevengo" value="Fecha del último devengo: " />
+												<p:inputText id="FechaUltimoDevengo" value="#{GestorPagosProvision.sFechaUltimoDevengo}" size="9" disabled="true"/>
 
+												<h:outputText value="Tipo de pago:  "/>
+												<p:selectOneMenu id="TIPOPAGO" value="#{GestorPagosProvision.sTipoPago}">
+													<f:selectItem itemLabel="Tipo..." itemValue=""/>
+													<f:selectItems value="#{GestorPagosProvision.tipospagoHM}"/>
+													<p:ajax update="TIPOPAGO,panelCuenta" listener="#{GestorPagosProvision.cambiaTipoPago}"/>
+												</p:selectOneMenu>
 											</h:panelGrid>
 										</p:panel>
 
@@ -201,7 +207,7 @@
 										</p:panel>
 
 
-										<p:panel>
+										<p:panel id="panelCuenta">
 											<h:panelGrid columns="2" cellpadding="5">
 
 										<p:panel>
@@ -213,25 +219,25 @@
 
 										<h:outputText value="Número de Cuenta: "/>
 
-										<p:inputMask id="NUCCEN" value="#{GestorPagosProvision.sNUCCEN}" mask="9999" size="4">
+										<p:inputMask id="NUCCEN" value="#{GestorPagosProvision.sNUCCEN}" mask="9999" size="4" disabled="#{GestorPagosProvision.bBloquearCuenta}">
 											<f:validateLength minimum="4"/>
 										</p:inputMask>
 
-										<p:inputMask id="NUCCOF" value="#{GestorPagosProvision.sNUCCOF}" mask="9999" size="4">
+										<p:inputMask id="NUCCOF" value="#{GestorPagosProvision.sNUCCOF}" mask="9999" size="4" disabled="#{GestorPagosProvision.bBloquearCuenta}">
 											<f:validateLength minimum="4"/>
 										</p:inputMask>
 
-										<p:inputMask id="NUCCDI" value="#{GestorPagosProvision.sNUCCDI}" mask="99" size="2">
+										<p:inputMask id="NUCCDI" value="#{GestorPagosProvision.sNUCCDI}" mask="99" size="2" disabled="#{GestorPagosProvision.bBloquearCuenta}">
 											<f:validateLength minimum="2"/>
 										</p:inputMask>
 
-										<p:inputMask id="NUCCNT" value="#{GestorPagosProvision.sNUCCNT}" mask="9999999999" size="10">
+										<p:inputMask id="NUCCNT" value="#{GestorPagosProvision.sNUCCNT}" mask="9999999999" size="10" disabled="#{GestorPagosProvision.bBloquearCuenta}">
 											<f:validateLength minimum="10"/>
 										</p:inputMask>
 											</h:panelGrid>
 									  </p:panel>
 
-									 <p:commandButton value="Limpiar Cuenta" update="msgs, popup, PAIS, DCIBAN, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION" actionListener="#{GestorPagosProvision.limpiarPlantillaCuenta}"/>
+									 <p:commandButton value="Limpiar Cuenta" update="msgs, popup, PAIS, DCIBAN, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION" actionListener="#{GestorPagosProvision.limpiarPlantillaCuenta}" disabled="#{GestorPagosProvision.bBloquearCuenta}"/>
 
 										<p:panel>
 											<h:panelGrid columns="2" cellpadding="5">
@@ -239,10 +245,6 @@
 												<p:inputText id="DESCRIPCION" value="#{GestorPagosProvision.sDescripcion}" size="66" maxlength="60" disabled="true"/>
 											</h:panelGrid>
 									  </p:panel>
-
-									 <p:commandButton value="Sin Cuenta" update="msgs, popup, PAIS, DCIBAN, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION" actionListener="#{GestorPagosProvision.seleccionarPagoPorVentanilla}"/>
-
-
 
 											</h:panelGrid>
 									  </p:panel>
