--- a/WebContent/pagosimple.xhtml
+++ b/WebContent/pagosimple.xhtml
@@ -122,11 +122,20 @@
 										<h:panelGrid columns="1" cellpadding="3">
 
 										<p:panel>
-											<h:panelGrid columns="3" cellpadding="5">
+											<h:panelGrid columns="5" cellpadding="5">
+												
 												<h:outputText for="FEPGPR" value="Fecha de Pago: " />
 												<p:inputMask id="FEPGPR" value="#{GestorPagosSimple.sFEPGPR}" mask="99/99/9999" size="10" maxlength="10"/>
 
 												<p:commandButton icon="ui-icon-clock" update="FEPGPR" actionListener="#{GestorPagosSimple.hoyFEPGPR}"/>
+
+												<h:outputText value="Tipo de pago:  "/>
+												<p:selectOneMenu id="TIPOPAGO" value="#{GestorPagosSimple.sTipoPago}" disabled="#{GestorPagosSimple.bDevolucion}">
+													<f:selectItem itemLabel="Tipo..." itemValue=""/>
+													<f:selectItems value="#{GestorPagosSimple.tipospagoHM}"/>
+													<p:ajax update="TIPOPAGO,panelCuenta" listener="#{GestorPagosSimple.cambiaTipoPago}"/>
+												</p:selectOneMenu>
+
 											</h:panelGrid>
 										</p:panel>
 
@@ -134,7 +143,7 @@
 											<h:panelGrid columns="7" cellpadding="5">
 
 												<h:outputText for="TRECARGO" value="Recargo adicional en pago: " />
-												<p:selectOneMenu id="TRECARGO" value="#{GestorPagosSimple.sTipoRecargo}">
+												<p:selectOneMenu id="TRECARGO" value="#{GestorPagosSimple.sTipoRecargo}" disabled="#{GestorPagosSimple.bDevolucion}">
 													<f:selectItem itemLabel="Sin recargo" itemValue=""/>
 													<f:selectItems value="#{GestorPagosComunidad.tiposrecargoHM}"/>
 														<p:ajax update="VRECARGO" listener="#{GestorPagosSimple.cambiaRecargo}"/>
@@ -165,25 +174,25 @@
 
 										<h:outputText value="Número de Cuenta: "/>
 
-										<p:inputMask id="NUCCEN" value="#{GestorPagosSimple.sNUCCEN}" mask="9999" size="4" disabled="#{GestorPagosSimple.bDevolucion}">
+										<p:inputMask id="NUCCEN" value="#{GestorPagosSimple.sNUCCEN}" mask="9999" size="4" disabled="#{GestorPagosSimple.bBloquearCuenta}">
 											<f:validateLength minimum="4"/>
 										</p:inputMask>
 
-										<p:inputMask id="NUCCOF" value="#{GestorPagosSimple.sNUCCOF}" mask="9999" size="4" disabled="#{GestorPagosSimple.bDevolucion}">
+										<p:inputMask id="NUCCOF" value="#{GestorPagosSimple.sNUCCOF}" mask="9999" size="4" disabled="#{GestorPagosSimple.bBloquearCuenta}">
 											<f:validateLength minimum="4"/>
 										</p:inputMask>
 
-										<p:inputMask id="NUCCDI" value="#{GestorPagosSimple.sNUCCDI}" mask="99" size="2" disabled="#{GestorPagosSimple.bDevolucion}">
+										<p:inputMask id="NUCCDI" value="#{GestorPagosSimple.sNUCCDI}" mask="99" size="2" disabled="#{GestorPagosSimple.bBloquearCuenta}">
 											<f:validateLength minimum="2"/>
 										</p:inputMask>
 
-										<p:inputMask id="NUCCNT" value="#{GestorPagosSimple.sNUCCNT}" mask="9999999999" size="10" disabled="#{GestorPagosSimple.bDevolucion}">
+										<p:inputMask id="NUCCNT" value="#{GestorPagosSimple.sNUCCNT}" mask="9999999999" size="10" disabled="#{GestorPagosSimple.bBloquearCuenta}">
 											<f:validateLength minimum="10"/>
 										</p:inputMask>
 											</h:panelGrid>
 									  </p:panel>
 
-										<p:commandButton id="botBuscaCuenta" value="Buscar Cuenta" update="cuentasactivo, cuentascomunidad, msgs, popup, PAIS, DCIBAN, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION" actionListener="#{GestorPagosSimple.buscaCuentas}" oncomplete="dlgTablaCuentas.show()" disabled="#{GestorPagosSimple.bDevolucion}"/>	
+										<p:commandButton id="botBuscaCuenta" value="Buscar Cuenta" update="cuentasactivo, cuentascomunidad, msgs, popup, PAIS, DCIBAN, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION" actionListener="#{GestorPagosSimple.buscaCuentas}" oncomplete="dlgTablaCuentas.show()" disabled="#{GestorPagosSimple.bBloquearCuenta}"/>	
 
 										<p:panel>
 											<h:panelGrid columns="2" cellpadding="5">
@@ -192,9 +201,7 @@
 											</h:panelGrid>
 									  </p:panel>
 
-									 <p:commandButton id="botSinCuenta" value="Sin Cuenta" update="msgs, popup, PAIS, DCIBAN, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION" actionListener="#{GestorPagosSimple.seleccionarPagoPorVentanilla}" disabled="#{GestorPagosSimple.bDevolucion}"/>
-
-									 <p:commandButton id="botLimpiaCuenta" value="Limpiar Cuenta" update="msgs, popup, PAIS, DCIBAN, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION" actionListener="#{GestorPagosSimple.limpiarPlantillaCuenta}" disabled="#{GestorPagosSimple.bDevolucion}"/>
+									 <p:commandButton id="botLimpiaCuenta" value="Limpiar Cuenta" update="msgs, popup, PAIS, DCIBAN, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION" actionListener="#{GestorPagosSimple.limpiarPlantillaCuenta}" disabled="#{GestorPagosSimple.bBloquearCuenta}"/>
 
 											</h:panelGrid>
 									  </p:panel>
@@ -634,7 +641,7 @@
 											<p:panel id="panelBuscarGastosActivo" >
 												<h:panelGrid columns="1" cellpadding="5">
 													<p:panel>
-														<h:panelGrid columns="4" cellpadding="1">
+														<h:panelGrid columns="2" cellpadding="1">
 															<h:outputText value="Grupo de gasto: "/>
 															<p:selectOneMenu id="COGRUGBA" value="#{GestorPagosSimple.sCOGRUGBA}">
 																<f:selectItem itemLabel="Grupo..." itemValue=""/>
@@ -658,7 +665,7 @@
 													</p:panel>
 
 													<p:panel>
-														<h:panelGrid columns="2" cellpadding="1">
+														<h:panelGrid columns="4" cellpadding="1">
 															<h:outputText value="Importe: "/>
 															<p:selectOneMenu id="COMPARADORBA" value="#{GestorPagosSimple.sComparadorBA}">
 																<f:selectItem itemLabel="Comparar..." itemValue=""/>
@@ -934,7 +941,7 @@
 					<p:dialog header="Cuentas Disponibles: " widgetVar="dlgTablaCuentas" resizable="false">
 
 						<p:contextMenu for="cuentasactivo">
-							<p:menuitem value="Seleccionar" update="form:popup, form:msgs, NUCCEN, NUCCOF, NUCCDI, NUCCNT" icon="ui-icon-check" actionListener="#{GestorPagosSimple.seleccionarCuentaActivo}" oncomplete="dlgTablaCuentas.hide();"/>
+							<p:menuitem value="Seleccionar" update="form:popup, form:msgs, panelCuenta" icon="ui-icon-check" actionListener="#{GestorPagosSimple.seleccionarCuentaActivo}" oncomplete="dlgTablaCuentas.hide();"/>
 						</p:contextMenu>
 
 								<p:dataTable id="cuentasactivo" var="cuentaactivo" value="#{GestorPagosSimple.tablacuentasactivo}" rowKey="#{cuentaactivo.sNUCCEN}"
@@ -1000,7 +1007,7 @@
 
 
 						<p:contextMenu for="cuentascomunidad">
-							<p:menuitem value="Seleccionar" update="form:popup, form:msgs, NUCCEN, NUCCOF, NUCCDI, NUCCNT" icon="ui-icon-check" actionListener="#{GestorPagosSimple.seleccionarCuentaComunidad}" oncomplete="dlgTablaCuentas.hide();"/>
+							<p:menuitem value="Seleccionar" update="form:popup, form:msgs, panelCuenta" icon="ui-icon-check" actionListener="#{GestorPagosSimple.seleccionarCuentaComunidad}" oncomplete="dlgTablaCuentas.hide();"/>
 						</p:contextMenu>
 
 								<p:dataTable id="cuentascomunidad" var="cuentacomunidad" value="#{GestorPagosSimple.tablacuentascomunidad}" rowKey="#{cuentacomunidad.sNUCCEN}"
