--- a/WebContent/detallesreferencia.xhtml
+++ b/WebContent/detallesreferencia.xhtml
@@ -40,6 +40,7 @@
 
 								<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button"/>
 								<p:commandButton value="Notas" onclick="dlgNotas.show()" type="button"/>
+								<p:graphicImage id="MARCA" value="recursos/notas.png" rendered="#{GestorDetallesReferencia.bConNotas}"/>
 
 								<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top" style="height: auto">
 									<h:panelGrid columns="2" cellpadding="5">
@@ -148,13 +149,14 @@
 						</h:panelGrid>
 					</p:panel>
 
-					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
+					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false" visible="#{GestorDetallesReferencia.bConNotas}" position="right">
 						<h:panelGrid columns="1" cellpadding="1">
 							<p:panel>
-								<h:panelGrid columns="2" cellpadding="5">
+								<h:panelGrid columns="3" cellpadding="5">
 
 									<p:commandButton value="Limpiar" update="NOTA" actionListener="#{GestorDetallesReferencia.limpiarNota}"/>
-									<p:commandButton value="Guardar" update="NOTA" actionListener="#{GestorDetallesReferencia.guardaNota}"/>
+									<p:commandButton value="Guardar" update="NOTA, MARCA" actionListener="#{GestorDetallesReferencia.guardaNota}"/>
+									<p:commandButton value="Restaurar" update="NOTA, MARCA" actionListener="#{GestorDetallesReferencia.restablecerNota}"/>
 
 								</h:panelGrid>
 							</p:panel>
