--- a/WebContent/listacuotas.xhtml
+++ b/WebContent/listacuotas.xhtml
@@ -59,9 +59,9 @@
 											<p:panel >
 												<h:panelGrid columns="4" cellpadding="5">
 													<h:outputText for="COACES" value="Activo: "/>
-													<p:inputMask id="COACES" value="#{GestorListaCuotas.sCOACES}" mask="9?99999999" placeHolder=" " size="9" maxlength="9"/>
-													<p:message for="COACES" display="icon"/>
-													<p:commandButton value="Buscar Cuotas" update="cuotas, msgs, popup"  oncomplete="dlgFiltrarCuotaActivo.show()"/>	
+													<p:inputText id="COACES" value="#{GestorListaCuotas.sCOACES}" size="9" maxlength="9"/>													
+
+													<p:commandButton value="Buscar Cuotas" update="cuotas, msgs, popup" oncomplete="dlgFiltrarCuotaActivo.show()"/>	
 												</h:panelGrid>
 											</p:panel>
 											<p:commandButton value="Buscar Activo" update="COACES, form:activos, msgs, popup" oncomplete="dlgBuscarActivos.show()"/>
