--- a/WebContent/listagastos.xhtml
+++ b/WebContent/listagastos.xhtml
@@ -67,11 +67,10 @@
 								<p:fieldset legend="Activo">
 										<h:panelGrid columns="2" cellpadding="5">
 											<p:panel >
-												<h:panelGrid columns="4" cellpadding="5">
+												<h:panelGrid columns="3" cellpadding="5">
 													<h:outputText for="COACES" value="Activo: " />
-														<p:inputText id="COACES" value="#{GestorListaGastos.sCOACES}" size="9" maxlength="9">
-														</p:inputText>
-													<p:message for="COACES" display="icon"/>
+													<p:inputText id="COACES" value="#{GestorListaGastos.sCOACES}" size="9" maxlength="9"/>
+
 													<p:commandButton value="Buscar Gastos" update="gastos, msgs, popup"  oncomplete="dlgFiltrarGastoActivo.show()"/>	
 												</h:panelGrid>
 											</p:panel>
