--- a/WebContent/movimientoscomunidades.xhtml
+++ b/WebContent/movimientoscomunidades.xhtml
@@ -32,7 +32,7 @@
 						<p:fieldset legend="Acciones">
 							<h:panelGrid columns="3" cellpadding="5">
 
-								<p:commandButton value="Limpiar Plantilla" update="panel, COACCI" actionListener="#{GestorMovimientosComunidades.limpiarPlantilla}"/>
+								<p:commandButton value="Limpiar Plantilla" update="panel, COACCI, NOTA" actionListener="#{GestorMovimientosComunidades.limpiarPlantilla}"/>
 
 								<p:commandButton value="Registrar Datos" onclick="dlgConfirmaRegistrar.show()"/>
 
@@ -81,10 +81,10 @@
 									<p:panel >
 										<h:panelGrid columns="3" cellpadding="5">
 
-											<h:outputText for="COACES" value="Código de activo: "/>
+											<h:outputText for="COACES" value="Activo: "/>
 											<p:inputText id="COACES" value="#{GestorMovimientosComunidades.sCOACES}" size="10" maxlength="9"/>
 
-											<p:commandButton value="Buscar Comunidad" update="msgs, popup, panel, NOTA, COACES" actionListener="#{GestorMovimientosComunidades.buscarComunidad}"/>	
+											<p:commandButton value="Buscar Comunidad" update="msgs, popup, panel, NOTA, COACES, DNOTAS" actionListener="#{GestorMovimientosComunidades.buscarComunidad}"/>	
 
 										</h:panelGrid>
 									</p:panel>
@@ -109,7 +109,7 @@
 											<h:outputText for="NUDCOM" value="Número: "/>
 											<p:inputText id="NUDCOM" value="#{GestorMovimientosComunidades.sNUDCOM}" size="10" maxlength="10"/>
 
-											<p:commandButton value="Cargar" update="panel, msgs, popup, NOTA" actionListener="#{GestorMovimientosComunidades.cargarComunidad}"/>
+											<p:commandButton value="Cargar" update="panel, msgs, popup, NOTA, DNOTAS" actionListener="#{GestorMovimientosComunidades.cargarComunidad}"/>
 
 										</h:panelGrid>
 								  </p:panel>
@@ -210,12 +210,14 @@
 						</h:panelGrid>
 					</p:dialog>
 
-					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
+					<p:dialog id="DNOTAS" header="Notas:" widgetVar="dlgNotas" resizable="false" visible="#{GestorMovimientosComunidades.bConNotas}" position="right">
 						<h:panelGrid columns="1" cellpadding="1">
 							<p:panel>
-								<h:panelGrid columns="2" cellpadding="5">
+								<h:panelGrid columns="3" cellpadding="5">
 
 									<p:commandButton value="Limpiar" update="NOTA" actionListener="#{GestorMovimientosComunidades.limpiarNota}"/>
+									<p:commandButton value="Guardar" update="NOTA" actionListener="#{GestorMovimientosComunidades.guardaNota}"/>
+									<p:commandButton value="Restaurar" update="NOTA" actionListener="#{GestorMovimientosComunidades.restablecerNota}"/>
 
 								</h:panelGrid>
 							</p:panel>
