--- a/WebContent/movimientosimpuestos.xhtml
+++ b/WebContent/movimientosimpuestos.xhtml
@@ -80,10 +80,10 @@
 										<p:panel>
 											<h:panelGrid columns="3" cellpadding="5">
 
-												<h:outputText for="COACES" value="Código de activo: "/>
+												<h:outputText for="COACES" value="Activo: "/>
 												<p:inputText id="COACES" value="#{GestorMovimientosImpuestosRecursos.sCOACES}" size="9" maxlength="9"/>
 
-												<p:commandButton value="Cargar Impuestos" update="msgs, popup, COACES, form:impuestos" actionListener="#{GestorMovimientosImpuestosRecursos.cargarImpuestos}" oncomplete="dlgTablaImpuestos.show()"/>
+												<p:commandButton value="Buscar Recurso" update="msgs, popup, COACES, form:impuestos" oncomplete="dlgFiltrarRecursoActivo.show()"/>
 
 											</h:panelGrid>
 										</p:panel>
@@ -197,12 +197,14 @@
 						</h:panelGrid>
 					</p:dialog>
 
-					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
+					<p:dialog id="DNOTAS" header="Notas:" widgetVar="dlgNotas" resizable="false" visible="#{GestorMovimientosImpuestosRecursos.bConNotas}" position="right">
 						<h:panelGrid columns="1" cellpadding="1">
 							<p:panel>
-								<h:panelGrid columns="2" cellpadding="5">
+								<h:panelGrid columns="3" cellpadding="5">
 
 									<p:commandButton value="Limpiar" update="NOTA" actionListener="#{GestorMovimientosImpuestosRecursos.limpiarNota}"/>
+									<p:commandButton value="Guardar" update="NOTA" actionListener="#{GestorMovimientosImpuestosRecursos.guardaNota}"/>
+									<p:commandButton value="Restaurar" update="NOTA" actionListener="#{GestorMovimientosImpuestosRecursos.restablecerNota}"/>
 
 								</h:panelGrid>
 							</p:panel>
@@ -217,7 +219,7 @@
 
 					<p:dialog header="Impuestos disponibles: " widgetVar="dlgTablaImpuestos" resizable="false">
 						<p:contextMenu for="impuestos">
-							<p:menuitem value="Seleccionar" update="panel, form:popup" icon="ui-icon-check" actionListener="#{GestorMovimientosImpuestosRecursos.seleccionarImpuesto}" oncomplete="dlgTablaImpuestos.hide()"/>
+							<p:menuitem value="Seleccionar" update="panel, form:popup, DNOTAS" icon="ui-icon-check" actionListener="#{GestorMovimientosImpuestosRecursos.seleccionarImpuesto}" oncomplete="dlgTablaImpuestos.hide()"/>
 						</p:contextMenu>
 
 						<p:dataTable id="impuestos" var="impuesto" value="#{GestorMovimientosImpuestosRecursos.tablaimpuestos}" rowKey="#{impuesto.DCOSBAC}"
@@ -378,7 +380,96 @@
 							</h:panelGrid>
 						</p:fieldset>
 					</p:dialog>
+					<p:dialog header="Filtrar Recursos Activo: " widgetVar="dlgFiltrarRecursoActivo" resizable="false">  
+									<p:fieldset legend="Filtro">
+										<h:panelGrid columns="1" cellpadding="5">
+											<p:panel id="panelFiltrarRecursoActivo">
+												<h:panelGrid columns="1" cellpadding="5">
 
+													<p:panel>
+														<h:panelGrid columns="2" cellpadding="5">
+
+															<h:outputText for="NURCATFA" value="Referencia Catastral: " />
+															<p:inputText id="NURCATFA" value="#{GestorMovimientosImpuestosRecursos.sNURCATFA}" size="22" maxlength="20"/>
+
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="2" cellpadding="5">
+
+															<h:outputText value="Impuesto: "/>
+															<p:selectOneMenu id="COSBACFA" value="#{GestorMovimientosImpuestosRecursos.sCOSBACFA}">
+																<f:selectItem itemLabel="Impuesto..." itemValue=""/>
+																<f:selectItems value="#{GestorMovimientosImpuestosRecursos.tiposcosbacHM}"/>
+															</p:selectOneMenu>
+
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="3" cellpadding="1">
+															<h:outputText value="Fecha Solicitud: "/>
+															<p:inputMask id="FEPRREFA" value="#{GestorMovimientosImpuestosRecursos.sFEPRREFA}" mask="99/99/9999" size="10" maxlength="10"/>
+															<p:commandButton icon="ui-icon-clock" update="FEPRREFA" actionListener="#{GestorMovimientosImpuestosRecursos.hoyFEPRREFA}"/>
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="2" cellpadding="5">
+
+															<h:outputText value="Resolución: "/>
+															<p:selectOneMenu id="BIRESOFA" value="#{GestorMovimientosImpuestosRecursos.sBIRESOFA}">
+																<f:selectItem itemLabel="Resolución..." itemValue=""/>
+																<f:selectItems value="#{GestorMovimientosImpuestosRecursos.tiposbiresoHM}"/>
+															</p:selectOneMenu>
+
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="3" cellpadding="1">
+															<h:outputText value="Fecha Resolución "/>
+															<p:inputMask id="FEREREFA" value="#{GestorMovimientosImpuestosRecursos.sFEREREFA}" mask="99/99/9999" size="10" maxlength="10"/>
+															<p:commandButton icon="ui-icon-clock" update="FEREREFA" actionListener="#{GestorMovimientosImpuestosRecursos.hoyFEREREFA}"/>
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="2" cellpadding="5">
+
+															<h:outputText value="Con Devolución: "/>
+															<p:selectOneMenu id="BISODEFA" value="#{GestorMovimientosImpuestosRecursos.sBISODEFA}">
+																<f:selectItem itemLabel="Devolución..." itemValue=""/>
+																<f:selectItems value="#{GestorMovimientosImpuestosRecursos.tiposbinariaHM}"/>
+															</p:selectOneMenu>
+
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="3" cellpadding="1">
+															<h:outputText value="Fecha Devolución: "/>
+															<p:inputMask id="FEDEINFA" value="#{GestorMovimientosImpuestosRecursos.sFEDEINFA}" mask="99/99/9999" size="10" maxlength="10"/>
+															<p:commandButton icon="ui-icon-clock" update="FEDEINFA" actionListener="#{GestorMovimientosImpuestosRecursos.hoyFEDEINFA}"/>
+														</h:panelGrid>
+													</p:panel>
+
+												</h:panelGrid>
+											</p:panel>
+											<p:panel >
+												<h:panelGrid columns="3" cellpadding="5">
+													
+													<p:commandButton value="Buscar" update="popup, msgs, form:impuestos" actionListener="#{GestorMovimientosImpuestosRecursos.buscarRecursosActivo}" oncomplete="dlgFiltrarRecursoActivo.hide(); dlgTablaImpuestos.show()"/>	
+													<p:commandButton value="Limpiar Plantilla" update="panelFiltrarRecursoActivo" actionListener="#{GestorMovimientosImpuestosRecursos.limpiarPlantillaFiltroRecursosActivo}" />	
+
+												</h:panelGrid>
+											</p:panel>
+
+													
+										</h:panelGrid>
+									</p:fieldset>
+					</p:dialog>
 					<p:dialog modal="true" widgetVar="statusDialog" header="Tramitando..." draggable="false" closable="false">
 						<p:graphicImage value="recursos/loadingBar.gif"/>
 					</p:dialog>
