--- a/WebContent/movimientosreferencias.xhtml
+++ b/WebContent/movimientosreferencias.xhtml
@@ -80,10 +80,10 @@
 										<p:panel>
 											<h:panelGrid columns="3" cellpadding="5">
 
-												<h:outputText for="COACES" value="Código de activo: " />
-												<p:inputMask id="COACES" value="#{GestorMovimientosReferenciasCatastrales.sCOACES}" mask="9?99999999" placeHolder=" " size="9" maxlength="9"/>
+												<h:outputText for="COACES" value="Activo: " />
+												<p:inputText id="COACES" value="#{GestorMovimientosReferenciasCatastrales.sCOACES}" size="9" maxlength="9"/>
 
-												<p:commandButton value="Carga Referencias" update="msgs, popup, panel, referencias" actionListener="#{GestorMovimientosReferenciasCatastrales.cargarReferencias}"  oncomplete="dlgTablaReferencias.show()"/>
+												<p:commandButton value="Carga Referencias" update="msgs, popup, panel, referencias" oncomplete="dlgFiltrarReferenciaActivo.show()"/>
 
 											</h:panelGrid>
 										</p:panel>
@@ -174,12 +174,14 @@
 						</h:panelGrid>
 					</p:dialog>
 
-					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
+					<p:dialog id="DNOTAS" header="Notas:" widgetVar="dlgNotas" resizable="false" visible="#{GestorMovimientosReferenciasCatastrales.bConNotas}" position="right">
 						<h:panelGrid columns="1" cellpadding="1">
 							<p:panel>
-								<h:panelGrid columns="2" cellpadding="5">
+								<h:panelGrid columns="3" cellpadding="5">
 
 									<p:commandButton value="Limpiar" update="NOTA" actionListener="#{GestorMovimientosReferenciasCatastrales.limpiarNota}"/>
+									<p:commandButton value="Guardar" update="NOTA" actionListener="#{GestorMovimientosReferenciasCatastrales.guardaNota}"/>
+									<p:commandButton value="Restaurar" update="NOTA" actionListener="#{GestorMovimientosReferenciasCatastrales.restablecerNota}"/>
 
 								</h:panelGrid>
 							</p:panel>
@@ -192,9 +194,88 @@
 						</h:panelGrid>
 					</p:dialog>
 
+					<p:dialog header="Filtrar Referencias Activo: " widgetVar="dlgFiltrarReferenciaActivo" resizable="false">  
+									<p:fieldset legend="Filtro">
+										<h:panelGrid columns="1" cellpadding="5">
+											<p:panel id="panelFiltrarReferenciaActivo">
+												<h:panelGrid columns="1" cellpadding="5">
+
+													<p:panel>
+														<h:panelGrid columns="2" cellpadding="5">
+
+															<h:outputText for="NURCATFA" value="Referencia Catastral: " />
+															<p:inputText id="NURCATFA" value="#{GestorMovimientosReferenciasCatastrales.sNURCATFA}" size="22" maxlength="20"/>
+
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="2" cellpadding="1">
+															<h:outputText for="TIRCATFA" value="Titular Catastral: " />
+															<p:inputText id="TIRCATFA" value="#{GestorMovimientosReferenciasCatastrales.sTIRCATFA}" size="60" maxlength="60"/>
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="2" cellpadding="1">
+															<h:outputText for="ENEMISFA" value="Entidad de Emisión: " />
+															<p:inputText id="ENEMISFA" value="#{GestorMovimientosReferenciasCatastrales.sENEMISFA}" size="60" maxlength="60"/>
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="4" cellpadding="1">
+															<h:outputText value="Valor del Suelo: "/>
+															<p:selectOneMenu id="COMPARADORSUELOFA" value="#{GestorMovimientosReferenciasCatastrales.sComparadorSueloFA}">
+																<f:selectItem itemLabel="Comparar..." itemValue=""/>
+																<f:selectItems value="#{GestorMovimientosReferenciasCatastrales.tiposcomparaimporteHM}"/>
+																<p:ajax update="COMPARADORSUELOFA, IMVSUEFA" listener="#{GestorMovimientosReferenciasCatastrales.cambiaComparadorSueloFA}"/>
+															</p:selectOneMenu>
+															<p:inputText id="IMVSUEFA" value="#{GestorMovimientosReferenciasCatastrales.sIMVSUEFA}" size="16" maxlength="16" disabled="#{GestorMovimientosReferenciasCatastrales.bSeleccionadoSueloFA}"/>
+															<h:outputText value="¤"/>
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="4" cellpadding="1">
+															<h:outputText value="Valor Catastral: "/>
+															<p:selectOneMenu id="COMPARADORCATASTRALFA" value="#{GestorMovimientosReferenciasCatastrales.sComparadorCatastralFA}">
+																<f:selectItem itemLabel="Comparar..." itemValue=""/>
+																<f:selectItems value="#{GestorMovimientosReferenciasCatastrales.tiposcomparaimporteHM}"/>
+																<p:ajax update="COMPARADORCATASTRALFA, IMCATAFA" listener="#{GestorMovimientosReferenciasCatastrales.cambiaComparadorCatastralFA}"/>
+															</p:selectOneMenu>
+															<p:inputText id="IMCATAFA" value="#{GestorMovimientosReferenciasCatastrales.sIMCATAFA}" size="16" maxlength="16" disabled="#{GestorMovimientosReferenciasCatastrales.bSeleccionadoCatastralFA}"/>
+															<h:outputText value="¤"/>
+														</h:panelGrid>
+													</p:panel>
+
+													<p:panel>
+														<h:panelGrid columns="3" cellpadding="1">
+															<h:outputText value="Fecha de revisión: "/>
+															<p:inputMask id="FERECAFA" value="#{GestorMovimientosReferenciasCatastrales.sFERECAFA}" mask="99/99/9999" size="10" maxlength="10"/>
+															<p:commandButton icon="ui-icon-clock" update="FERECAFA" actionListener="#{GestorMovimientosReferenciasCatastrales.hoyFERECAFA}"/>
+														</h:panelGrid>
+													</p:panel>
+
+												</h:panelGrid>
+											</p:panel>
+											<p:panel >
+												<h:panelGrid columns="3" cellpadding="5">
+													
+													<p:commandButton value="Buscar" update="popup, msgs, form:referencias" actionListener="#{GestorMovimientosReferenciasCatastrales.buscarReferenciasActivo}" oncomplete="dlgFiltrarReferenciaActivo.hide(); dlgTablaReferencias.show();"/>	
+													<p:commandButton value="Limpiar Plantilla" update="panelFiltrarReferenciaActivo" actionListener="#{GestorMovimientosReferenciasCatastrales.limpiarPlantillaFiltroRefereciasActivo}" />	
+
+												</h:panelGrid>
+											</p:panel>
+
+													
+										</h:panelGrid>
+									</p:fieldset>
+					</p:dialog>
+
 					<p:dialog header="Referencias asociadas al Activo: " widgetVar="dlgTablaReferencias" resizable="false">
 						<p:contextMenu for="referencias">
-							<p:menuitem value="Seleccionar" update="form:COACES, form:popup, form:msgs, form:NURCAT, form:TIRCAT, form:IMVSUE, form:IMCATA, form:FERECA, form:ENEMIS, form:OBTEXC"
+							<p:menuitem value="Seleccionar" update="form:COACES, form:popup, form:msgs, form:NURCAT, form:TIRCAT, form:IMVSUE, form:IMCATA, form:FERECA, form:ENEMIS, form:OBTEXC, DNOTAS"
 								icon="ui-icon-check" actionListener="#{GestorMovimientosReferenciasCatastrales.seleccionarReferencia}" oncomplete="dlgTablaReferencias.hide();"/>
 							</p:contextMenu>
 
