--- a/WebContent/revisapago.xhtml
+++ b/WebContent/revisapago.xhtml
@@ -400,22 +400,24 @@
 						</h:panelGrid>
 					</p:dialog>
 
-					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
-					<h:panelGrid columns="1" cellpadding="1">
-						<p:panel>
-							<h:panelGrid columns="2" cellpadding="5">
+					<p:dialog id="DNOTAS" header="Notas:" widgetVar="dlgNotas" resizable="false" visible="#{GestorRevisionPagos.bConNotas}" position="right">
+						<h:panelGrid columns="1" cellpadding="1">
+							<p:panel>
+								<h:panelGrid columns="3" cellpadding="5">
 
-								<p:commandButton value="Limpiar" update="NOTA" actionListener="#{GestorRevisionPagos.limpiarNota}"/>
+									<p:commandButton value="Limpiar" update="NOTA" actionListener="#{GestorRevisionPagos.limpiarNota}"/>
+									<p:commandButton value="Guardar" update="NOTA" actionListener="#{GestorRevisionPagos.guardaNota}"/>
+									<p:commandButton value="Restaurar" update="NOTA" actionListener="#{GestorRevisionPagos.restablecerNota}"/>
 
+								</h:panelGrid>
+							</p:panel>
+
+							<h:panelGrid columns="1" cellpadding="5">
+								<h:outputText id="counternota"/>
+								<p:inputTextarea id="NOTA" value="#{GestorRevisionPagos.sNota}" cols="40" rows="10" counter="counternota" maxlength="500"
+									counterTemplate="{0} carácteres restantes." autoResize="false"/>
 							</h:panelGrid>
-						</p:panel>
-
-						<h:panelGrid columns="1" cellpadding="5">
-							<h:outputText id="counternota"/>
-							<p:inputTextarea id="NOTA" value="#{GestorRevisionPagos.sNota}" cols="40" rows="10" counter="counternota" maxlength="500"
-								counterTemplate="{0} carácteres restantes." autoResize="false"/>
 						</h:panelGrid>
-					</h:panelGrid>
 					</p:dialog>
 
 					<p:dialog header="Activos con Gastos Autorizados: " widgetVar="dlgTabla" resizable="false">  
@@ -716,7 +718,7 @@
 					<p:dialog header="Gastos Autorizados del Activo: " widgetVar="dlgTablaGastosActivo" resizable="false">  
 
 						<p:contextMenu for="gastosactivo">
-							<p:menuitem value="Seleccionar" update="form:popup, form:msgs, form:panelDatosGasto, form:panelProgresoProvision, form:panelRecargo, form:panelCuenta, form:FEPGPR, form:TIPOPAGO, form:NOTA" icon="ui-icon-check" actionListener="#{GestorRevisionPagos.seleccionarPagoActivo}" oncomplete="dlgTablaGastosActivo.hide();  dlgBuscarGastosActivo.hide();"/>
+							<p:menuitem value="Seleccionar" update="form:popup, form:msgs, form:panelDatosGasto, form:panelProgresoProvision, form:panelRecargo, form:panelCuenta, form:FEPGPR, form:TIPOPAGO, form:NOTA, form:DNOTAS" icon="ui-icon-check" actionListener="#{GestorRevisionPagos.seleccionarPagoActivo}" oncomplete="dlgTablaGastosActivo.hide();  dlgBuscarGastosActivo.hide();"/>
 						</p:contextMenu>
 
 						<p:dataTable id="gastosactivo" var="gastoactivo" value="#{GestorRevisionPagos.tablagastosactivo}" rowKey="#{gastoactivo.sGastoID}"
@@ -854,7 +856,7 @@
 					<p:dialog header="Gastos Autorizados de la Provisión: " widgetVar="dlgTablaGastosProvision" resizable="false">  
 
 						<p:contextMenu for="gastosprovision">
-							<p:menuitem value="Seleccionar" update="form:popup, form:msgs, form:panelDatosGasto, form:panelProgresoProvision, form:panelRecargo, form:panelCuenta, form:FEPGPR, form:TIPOPAGO, form:NOTA" icon="ui-icon-check" actionListener="#{GestorRevisionPagos.seleccionarPagoProvision}" oncomplete="dlgTablaGastosProvision.hide();  dlgBuscarGastosProvision.hide();"/>
+							<p:menuitem value="Seleccionar" update="form:popup, form:msgs, form:panelDatosGasto, form:panelProgresoProvision, form:panelRecargo, form:panelCuenta, form:FEPGPR, form:TIPOPAGO, form:NOTA, form:DNOTAS" icon="ui-icon-check" actionListener="#{GestorRevisionPagos.seleccionarPagoProvision}" oncomplete="dlgTablaGastosProvision.hide();  dlgBuscarGastosProvision.hide();"/>
 						</p:contextMenu>
 
 						<p:dataTable id="gastosprovision" var="gastoprovision" value="#{GestorRevisionPagos.tablagastosprovision}" rowKey="#{gastoprovision.sGastoID}"
