PPv09d-b20150129-r1 -Panel de control (implementacion parcial)

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -121,6 +121,8 @@
 						<p:submenu label="Informes">
 							<p:menuitem value="Generar"
 								url="generainformes.xhtml" icon="ui-icon-arrowthick-1-e" />
+							<p:menuitem value="Panel de Control"
+								url="paneldecontrol.xhtml" icon="ui-icon-arrowthick-1-e" />
 						</p:submenu>						
 					</p:slideMenu>
 </html>
